--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -494,8 +494,6 @@ h2 {
 }
 
 .scrollable-container {
-    max-height: 750px;
-    /* Adjust the height as needed */
     overflow-y: auto;
     padding: 20px;
     border-radius: 5px;
@@ -508,6 +506,9 @@ h2 {
 .location-temperature {
     margin-bottom: 20px;
     text-align: center;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 
 .metric-card {
@@ -516,6 +517,11 @@ h2 {
     border: 1px solid #ddd;
     border-radius: 5px;
     text-align: center;
+}
+
+.metric-label {
+    font-size: 0.8em;
+    /* Smaller font size */
 }
 
 .metric-icon {
