make sidebar have view pridice button

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,7 +26,8 @@
             <h1>SmogSense</h1>
             <div>
                 <a href="{{ url_for('index') }}">Home</a>
-                <a href="#" id="view-predictions">View Predictions</a>
+                <!-- Removed View Predictions link -->
+                <!-- <a href="#" id="view-predictions">View Predictions</a> -->
                 <!-- <div class="dropdown">
                     <a href="#">Select Region</a>
                     <div class="dropdown-content">
