--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -504,11 +504,13 @@ h2 {
 }
 
 .location-temperature {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-align: center;
     position: sticky;
     top: 0;
+    background-color: #333;
     z-index: 1000;
+    padding-top: 10px; /* Add padding to align with the navbar */
 }
 
 .metric-card {
@@ -534,4 +536,25 @@ h2 {
     display: inline-block;
     margin-right: 5px;
     background-color: #4DD0E1;
+}
+
+
+.view-predictions-container {
+    display: flex;
+    justify-content: flex-end; /* Align to the right */
+    margin-top: 10px; /* Add some space above */
+}
+
+.view-predictions-link {
+    background-color: #4DD0E1; /* Background color */
+    color: #fff; /* Text color */
+    padding: 10px 20px; /* Padding for size */
+    border-radius: 5px; /* Rounded corners */
+    text-decoration: none; /* Remove underline */
+    font-weight: bold; /* Bold text */
+    transition: background-color 0.3s ease; /* Smooth transition */
+}
+
+.view-predictions-link:hover {
+    background-color: #3CBAC6; /* Darker color on hover */
 }
