--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,8 +8,11 @@
     <div class="location-temperature fixed-top">
         <h1 id="location-name">AMPHOE HAT YAI</h1>
         <div class="temperature-display">
-            <span id="temperature-value">26</span>°C
-            <span class="weather-condition">Cloudy</span>
+            <span id="pm25-value">45</span> μg/m³ <!-- Changed to PM2.5 -->
+            <span class="weather-condition">PM2.5</span>
+        </div>
+        <div class="view-predictions-container">
+            <a href="#" id="view-predictions" class="view-predictions-link">View Predictions</a> <!-- Styled link -->
         </div>
     </div>
 
