--- a/src/static/css/leaflet-search.css
+++ b/src/static/css/leaflet-search.css
@@ -1,119 +1,166 @@
- 
 .leaflet-container .leaflet-control-search {
-	position:relative;
-	float:left;
-	background:#fff;
-	color:#1978cf;
-	border: 2px solid rgba(0,0,0,0.2);
+	position: relative;
+	float: left;
+	background: #fff;
+	color: #1978cf;
+	border: 2px solid rgba(0, 0, 0, 0.2);
 	background-clip: padding-box;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	background-color: rgba(255, 255, 255, 0.8);
-	z-index:1000;	
+	z-index: 1000;
 	margin-left: 10px;
 	margin-top: 10px;
 }
-.leaflet-control-search.search-exp {/*expanded*/
+
+.leaflet-control-search.search-exp {
+	/*expanded*/
 	background: #fff;
-	border: 2px solid rgba(0,0,0,0.2);
-	background-clip: padding-box;	
+	border: 2px solid rgba(0, 0, 0, 0.2);
+	background-clip: padding-box;
 }
+
 .leaflet-control-search .search-input {
-	display:block;
-	float:left;
+	display: block;
+	float: left;
 	background: #fff;
-	border:1px solid #666;
-	border-radius:2px;
-	height:22px;
-	padding:0 20px 0 2px;
-	margin:4px 0 4px 4px;
+	border: 1px solid #666;
+	border-radius: 2px;
+	height: 22px;
+	padding: 0 20px 0 2px;
+	margin: 4px 0 4px 4px;
 }
+
 .leaflet-control-search.search-load .search-input {
 	background: url('../images/loader.gif') no-repeat center right #fff;
 }
+
 .leaflet-control-search.search-load .search-cancel {
-	visibility:hidden;
+	visibility: hidden;
 }
+
 .leaflet-control-search .search-cancel {
-	display:block;
-	width:22px;
-	height:22px;
-	position:absolute;
-	right:28px;
-	margin:6px 0;
+	display: block;
+	width: 22px;
+	height: 22px;
+	position: absolute;
+	right: 28px;
+	margin: 6px 0;
 	background: url('../images/search-icon.png') no-repeat 0 -46px;
-	text-decoration:none;
+	text-decoration: none;
 	filter: alpha(opacity=80);
-	opacity: 0.8;		
+	opacity: 0.8;
 }
+
 .leaflet-control-search .search-cancel:hover {
 	filter: alpha(opacity=100);
 	opacity: 1;
 }
+
 .leaflet-control-search .search-cancel span {
-	display:none;/* comment for cancel button imageless */
-	font-size:18px;
-	line-height:20px;
-	color:#ccc;
-	font-weight:bold;
+	display: none;
+	/* comment for cancel button imageless */
+	font-size: 18px;
+	line-height: 20px;
+	color: #ccc;
+	font-weight: bold;
 }
+
 .leaflet-control-search .search-cancel:hover span {
-	color:#aaa;
+	color: #aaa;
 }
+
 .leaflet-control-search .search-button {
-	display:block;
-	float:left;
-	width:30px;
-	height:30px;	
+	display: block;
+	float: left;
+	width: 30px;
+	height: 30px;
 	background: url('../images/search-icon.png') no-repeat 4px 4px #fff;
-	border-radius:4px;
+	border-radius: 4px;
 }
+
 .leaflet-control-search .search-button:hover {
 	background: url('../images/search-icon.png') no-repeat 4px -20px #fafafa;
 }
+
 .leaflet-control-search .search-tooltip {
-	position:absolute;
-	top:100%;
-	left:0;
-	float:left;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	float: left;
 	list-style: none;
 	padding-left: 0;
-	min-width:120px;
-	max-height:122px;
-	box-shadow: 1px 1px 6px rgba(0,0,0,0.4);
+	min-width: 120px;
+	max-height: 122px;
+	box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.4);
 	background-color: rgba(0, 0, 0, 0.25);
-	z-index:1010;
-	overflow-y:auto;
-	overflow-x:hidden;
+	z-index: 1010;
+	overflow-y: auto;
+	overflow-x: hidden;
 	cursor: pointer;
 }
+
 .leaflet-control-search .search-tip {
-	margin:2px;
-	padding:2px 4px;
-	display:block;
-	color:black;
+	margin: 2px;
+	padding: 2px 4px;
+	display: block;
+	color: black;
 	background: #eee;
-	border-radius:.25em;
-	text-decoration:none;	
-	white-space:nowrap;
-	vertical-align:middle;
+	border-radius: .25em;
+	text-decoration: none;
+	white-space: nowrap;
+	vertical-align: middle;
 }
+
 .leaflet-control-search .search-button:hover {
 	background-color: #f4f4f4;
 }
+
 .leaflet-control-search .search-tip-select,
 .leaflet-control-search .search-tip:hover {
 	background-color: #fff;
 }
+
 .leaflet-control-search .search-alert {
-	cursor:pointer;
-	clear:both;
-	font-size:.75em;
-	margin-bottom:5px;
-	padding:0 .25em;
-	color:#e00;
-	font-weight:bold;
-	border-radius:.25em;
+	cursor: pointer;
+	clear: both;
+	font-size: .75em;
+	margin-bottom: 5px;
+	padding: 0 .25em;
+	color: #e00;
+	font-weight: bold;
+	border-radius: .25em;
 }
 
+.leaflet-control-zoom {
+	background-color: #333333;
+	/* Dark background */
+	color: #ffffff;
+	/* Light text color */
+	border: 2px solid rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+	margin-top: 10px;
+	/* Position below region control */
+}
+
+.leaflet-control-zoom a {
+	background-color: #444444;
+	/* Dark button background */
+	color: #ffffff;
+	/* Light button text color */
+	border: none;
+	border-radius: 4px;
+	padding: 5px;
+	/* Smaller padding for smaller buttons */
+	margin: 2px;
+	text-align: center;
+	text-decoration: none;
+	display: block;
+}
+
+.leaflet-control-zoom a:hover {
+	background-color: #555555;
+	/* Slightly lighter on hover */
+}
